# rholang-rust

./: .gitignore  Cargo.toml  README.md  test.rho
bnfc/: gen.sh
bnfc/src/: Absyn.c  Lexer.c  Makefile  Parser.c  Printer.c  Skeleton.c  Test.c  Testrholang_mercury  rholang_mercury.l  rholang_mercury.y
dependencies/bnfc/: 0.gen.sh  aarch64-apple-darwin.sh  gcc.sh  rholang_mercury.cf
dependencies/bnfc/src/: Absyn.c  Absyn.h  Bison.h  Buffer.c  Lexer.c  Makefile  Parser.c  Parser.h  Test.c  rholang_mercury.l  rholang_mercury.y
dependencies/protobuf/: 0.gen.sh
docker/: Dockerfile  build.sh
model/: Cargo.toml  build.rs
model/src/: bitset.proto  bitset.rs  constant.rs  lib.rs  locally_free.rs
model/src/ordering/: hash.rs  mod.rs  sort_match.rs  sort_match_case.rs  sort_new.rs  sort_new_test.rs  sort_par.rs  sort_receive.rs  sort_receive_bind.rs  sort_receive_test.rs  sort_send.rs  sort_send_test.rs  sort_unforgeable.rs  sort_var.rs  sort_var_instance.rs
model/src/rho_types/: CompiliationError.rs  ExecutionError.rs  RhoTypes.rs  SourcePosition.rs  SyntaxError.rs  mod.rs  rho_types.proto  rho_types.rs
model/src/sort/: mod.rs  sort_par.rs  sort_send.rs
model/src/sorter/: ParSortMatcher.rs  ScoreTree.rs  Sortable.rs  mod.rs  score_tree.rs
rho-runtime/: .gitignore  Cargo.toml  README.md  build.rs  build_x86_64-apple-darwin.sh
rho-runtime/dependencies/bnfc/: 0.gen.sh
rho-runtime/dependencies/protobuf/: 0.gen.sh  rho_types.proto
rho-runtime/include/: wrapper.h
rho-runtime/include/bnfc/: Absyn.h  Absync.h  Parser.h  bnfc.h
rho-runtime/src/: main.rs
rho-runtime/src/bnfc/: mod.rs
rho-runtime/src/interpreter/: mod.rs
rho-runtime/src/interpreter/compiler/: bnfc.rs  builder.rs  context.rs  errors.rs  mod.rs  normalize.rs
rho-runtime/src/interpreter/compiler/context/: DeBruijnIndexMap.rs  DeBruijnIndexMap_test.rs  DeBruijnLevelMap.rs  IndexMapChain.rs  RcString.rs  SourcePosition.rs  VarSort.rs  mod.rs
rho-runtime/src/interpreter/compiler/normalize/: mod.rs  proc.rs  rho_ground.rs  rho_name.rs  rho_new.rs  rho_new_test.rs  rho_par.rs  rho_send.rs
rho-runtime/src/model/: bitset.rs  locally_free.rs  mod.rs  par.rs  rho_types.rs
rho-runtime/src/model/rho_types/: mod.rs  rho_types.proto  rho_types.rs
rho_runtime/: Cargo.toml
rho_runtime/src/: main.rs
rho_runtime/src/interpreter/: mod.rs  system_contract.rs  system_process.rs
rho_runtime/src/interpreter/reduce/: environment.rs  eval_match.rs  eval_new.rs  eval_par.rs  eval_receive.rs  eval_receive_test.rs  eval_send.rs  eval_var.rs  expression.rs  hash_rand.rs  mod.rs  receive.rs  send.rs
rho_runtime/src/interpreter/reduce/eval_expression/: eval_eplus.rs  eval_eplus_test.rs  expr_instance.rs  mod.rs  plus.rs
rho_runtime/src/interpreter/reduce/expression/: mod.rs  plus.rs  plus_test.rs
rho_runtime/src/interpreter/reduce/substitute/: mod.rs  par.rs  sub_bundle.rs  sub_expr.rs  sub_match.rs  sub_new.rs  sub_par.rs  sub_receive.rs  sub_send.rs
rho_runtime/src/storage/: congregator.rs  coordinator.rs  dispatch.rs  hash.rs  mod.rs  runner.rs  signal.rs  space.rs  space_matcher.rs  space_ops.rs  store.rs  transit.rs  tuplecell.rs
rholang-parser/: Cargo.toml  README.md  test.rho
rholang-parser/include/bnfc/: Printer.h
rholang-parser/src/: builder.rs  main.rs
rholang-parser/src/context/: DeBruijnIndexMap_test.rs  DeBruijnLevelMap.rs  RcString.rs  VarSort.rs  mod.rs
rholang-parser/src/normalize/: mod.rs  rho_ground.rs  rho_name.rs  rho_new.rs  rho_new_test.rs  rho_par_test.rs  rho_send.rs
rholang_parser/: Cargo.toml  build.rs
rholang_parser/include/bnfc/: Absyn.h  Parser.h  Skeleton.h
rholang_parser/src/: builder.rs  main.rs
rholang_parser/src/context/: DeBruijnIndexMap.rs  DeBruijnLevelMap.rs  IndexContext.rs  IndexMapChain.rs  LevelContext.rs  RcString.rs  VarSort.rs
rholang_parser/src/normalize/: mod.rs  norm_binary_expression.rs  norm_ground.rs  norm_ifelse.rs  norm_input.rs  norm_par.rs  norm_par_test.rs  (+7 more)
rholang_parser/tests/: common.rs  par.rs  pinput.rs  pnew.rs
rholang_parser_test/: Cargo.toml
rholang_parser_test/src/: main.rs
rholang_parser_test/src/tests/: mod.rs  par.rs  pnew.rs
(+3 files in other folders)
