[package]
name = "rho-runtime"
version = "0.1.0"
authors = ["jerry <vcer@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
protobuf = { version = "2.22", features = ["with-bytes"] }
thiserror = "1.0"


[build-dependencies]
bindgen = "0.57"
libc = "0.2"

# The generated model/rho_types.rs must match this version
protobuf = { version = "2.22", features = ["with-bytes"] }