[package]
name = "rho-runtime"
version = "0.1.0"
authors = ["++ <vcer@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
bytes = "1.0"
protobuf = { version = "2.22", features = ["with-bytes"] }
thiserror = "1.0"
libc = "0.2"
defer = "0.1"
bit-set = "0.5.2"

[build-dependencies]
bindgen = "0.57"
libc = "0.2"

# The generated model/rho_types.rs must match this version
protobuf = { version = "2.22", features = ["with-bytes"] }