[package]
name = "rho_runtime"
version = "0.1.0"
authors = ["++ <vcer@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
rholang_parser = { path = "../rholang_parser" }
log = "0.4"
pretty_env_logger = "0.4"
bytes = "1.0"
protobuf = { version = "2.22", features = ["with-bytes"] }
thiserror = "1.0"
libc = "0.2"
bit-vec = "0.6"
prost = "0.7"
tokio = {version = "1.4", features = ["full"] }
async-trait = "0.1"
crossbeam = "0.8"

[build-dependencies]
bindgen = "0.57"
libc = "0.2"
prost-build = { version = "0.7" }
prost-types = "0.7" # Only necessary if using Protobuf well-known types