[package]
name = "rho_runtime"
version = "0.1.0"
authors = ["++ <vcer@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
rholang_parser = { path = "../rholang_parser" }
log = "0.4"
pretty_env_logger = "0.4"
bytes = "1.0"
thiserror = "1.0"
libc = "0.2"
bit-vec = "0.6"
prost = "0.7"
tokio = {version = "1.5", features = ["full"] }
async-trait = "0.1"
crossbeam = "0.8"
blake3 = "0.3"
smallvec = "1.6"
rustc-hash = "1.1"
rand = "0.8"
tempfile = "3.2"
lazy_static = "1.4"
clap = "2.33"
num_cpus = "1.13"
futures = "0.3"

[build-dependencies]
bindgen = "0.57"
libc = "0.2"
prost-build = { version = "0.7" }
prost-types = "0.7" # Only necessary if using Protobuf well-known types


[dev-dependencies]
tokio-test = "0.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3"


