[package]
name = "rholang-parser"
version = "0.1.0"
authors = ["jerry <vcer@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1.0"
libc = "0.2"
prost = "0.7"
clap = "2.33"
bytes = "1.0"

[build-dependencies]
bindgen = "0.57"
